client/stylesheets/style.css
/* CSS */
.sign-in-form {
  max-width: 400px;
}

.left-column {
  width: 40%;
  float: left;
}

.right-column {
  width: 58%;
  float: right;
}

#attendancePie {
  width: 100%;
  margin: auto auto;
}

#perm-navbar-brand {
  color: #FF6B6B;
  font-weight: bold;
}

li .glyphicon {
  padding-right: 4px;
}

#flashes {
  position: absolute;
  left: 50%;
  top: 55px;
  z-index: 99;
  width: 600px;
}

.alert {
  position: relative;
  left: -50%;
}

.fc {
    max-width: 900px;
    margin: 0px auto 50px auto;
}

.huge-text {
  font-size: 40px;
}

.negative {
  color: #FF6B6B;
}

.positive {
  color: #C7F464;
}

.admin {
  background: #556270 !important;
  color: #fff !important;
}

.student {
  background: #E7E7E7 !important;
  color: #333333 !important;
}

.nurse {
  background: #4ECDC4 !important;
  color: #fff !important;
}

.command {
  background: #C44D58 !important;
  color: #fff !important;
}

.event-dropped {
  background: yellow !important;
  color: #000 !important;
  font-weight: bold !important;
}

